fix (Map) - fixed added of items in rooms